# EDS_GUIDES_TUTORIALS

./: .gitignore  main.py  pyproject.toml
notebooks/: 3_git_github.ipynb  4c_intro_API_in_python.ipynb  4d_UV_python_package_and _environmental management.ipynb  5_jupyter_notebooks.ipynb  6_python_foundations.ipynb  6b_python_comprehensiv_briefing.ipynb  UV_python_package_and _environmental management.ipynb  dotenv.ipynb  git_github.ipynb  internet_networking.ipynb  introduction_to_API_in_python.ipynb  jupyter_notebooks.ipynb  myqtns.ipynb  python_foundations.ipynb
