[project]
name = "eds-guides-tutorials"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "dotenv>=0.9.9",
    "ipykernel>=7.2.0",
    "openai>=2.29.0",
    "python-dotenv>=1.2.2",
    "sendgrid>=6.12.5",
    "tqdm>=4.67.3",
]
